--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "packageManager": "npm@9.6.5",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "test": "vitest"
   },
   "devDependencies": {
     "typescript": "^5.0.4",
