--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "outDir": "./dist",
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
