--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.1",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "@types/react-test-renderer": "^18.0.0",
     "axios": "1.4.0",
     "husky": "8.0.3",
     "jsdom": "^22.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.4",
     "vitest": "^0.30.1"
