--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "outDir": "./dist",
+    "jsx": "react-jsx",
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
