--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jsdom": "^21.1.1",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
