--- a/package.json
+++ b/package.json
@@ -9,21 +9,32 @@
   "type": "module",
   "scripts": {
     "test": "vitest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.9",
+    "@storybook/addon-interactions": "^7.0.9",
+    "@storybook/addon-links": "^7.0.9",
+    "@storybook/blocks": "^7.0.9",
+    "@storybook/react": "^7.0.9",
+    "@storybook/react-vite": "^7.0.9",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jsdom": "^21.1.1",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/react-test-renderer": "^18.0.0",
-    "axios": "1.4.0",
-    "husky": "8.0.3",
+    "axios": "^1.4.0",
+    "husky": "^8.0.3",
     "jsdom": "^22.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
+    "storybook": "^7.0.9",
     "typescript": "^5.0.4",
     "vite": "^4.3.4",
     "vitest": "^0.30.1"
