--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/selenium-webdriver": "^4.1.14",
     "axios": "^1.4.0",
+    "chromedriver": "^113.0.0",
+    "geckodriver": "^3.2.0",
     "husky": "^8.0.3",
     "jsdom": "^22.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
+    "selenium-webdriver": "^4.9.0",
     "storybook": "^7.0.9",
     "typescript": "^5.0.4",
     "vite": "^4.3.4",
