--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "husky": "^8.0.3",
     "jsdom": "^22.0.0",
     "prop-types": "^15.8.1",
+    "puppeteer": "^20.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
