--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "geckodriver": "^3.2.0",
     "husky": "^8.0.3",
     "jsdom": "^22.0.0",
+    "playwright": "^1.33.0",
     "prop-types": "^15.8.1",
     "puppeteer": "^20.1.1",
     "react": "^18.2.0",
