--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "type": "module",
   "scripts": {
     "test": "vitest",
+    "coverage": "vitest run --coverage",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -28,6 +29,7 @@
     "@types/react-dom": "^18.2.4",
     "@types/react-test-renderer": "^18.0.0",
     "@types/selenium-webdriver": "^4.1.14",
+    "@vitest/coverage-c8": "^0.31.0",
     "axios": "^1.4.0",
     "chromedriver": "^113.0.0",
     "geckodriver": "^3.2.0",
