--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "coverage": "vitest run --coverage",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "lint": "eslint src"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.9",
@@ -29,9 +30,13 @@
     "@types/react-dom": "^18.2.4",
     "@types/react-test-renderer": "^18.0.0",
     "@types/selenium-webdriver": "^4.1.14",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "@vitest/coverage-c8": "^0.31.0",
     "axios": "^1.4.0",
     "chromedriver": "^113.0.0",
+    "eslint": "^8.40.0",
+    "eslint-plugin-react": "^7.32.2",
     "geckodriver": "^3.2.0",
     "husky": "^8.0.3",
     "jsdom": "^22.0.0",
