--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
       - run:
           name: Run Test
           command: npm test -- src/chapter2/getting_started_vitest src/chapter2/assertion src/chapter2/group src/chapter2/mock
+      - store_test_results:
+          path: reports/vitest
 workflows:
   test:
     jobs:
