--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,16 @@ jobs:
     parallelism: 2
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - node-v1-{{ checksum "package-lock.json" }}
       - run:
           name: Install node package
           command: npm install
+      - save_cache:
+          paths:
+            - ./node_modules
+          key: node-v1-{{ checksum "package-lock.json" }}
       - run:
           name: Run Test
 #          command: npm test -- src/chapter2/getting_started_vitest src/chapter2/assertion src/chapter2/group src/chapter2/mock
