--- a/package.json
+++ b/package.json
@@ -17,42 +17,42 @@
     "format": "prettier --list-different src"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.18",
-    "@storybook/addon-interactions": "^7.0.18",
-    "@storybook/addon-links": "^7.0.18",
-    "@storybook/blocks": "^7.0.18",
-    "@storybook/react": "^7.0.18",
-    "@storybook/react-vite": "^7.0.18",
-    "@storybook/testing-library": "^0.1.0",
+    "@storybook/addon-essentials": "^7.0.26",
+    "@storybook/addon-interactions": "^7.0.26",
+    "@storybook/addon-links": "^7.0.26",
+    "@storybook/blocks": "^7.0.26",
+    "@storybook/react": "^7.0.26",
+    "@storybook/react-vite": "^7.0.26",
+    "@storybook/testing-library": "^0.2.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jsdom": "^21.1.1",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "@types/selenium-webdriver": "^4.1.15",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "@vitest/coverage-c8": "^0.31.2",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitest/coverage-v8": "^0.33.0",
     "axios": "^1.4.0",
-    "chromedriver": "^113.0.0",
-    "eslint": "^8.41.0",
+    "chromedriver": "^114.0.2",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
-    "geckodriver": "^4.0.2",
+    "geckodriver": "^4.0.4",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "playwright": "^1.34.3",
-    "prettier": "^2.8.8",
+    "playwright": "^1.36.0",
+    "prettier": "^3.0.0",
     "prop-types": "^15.8.1",
-    "puppeteer": "^20.4.0",
+    "puppeteer": "^20.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
-    "selenium-webdriver": "^4.9.2",
-    "storybook": "^7.0.18",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.9",
-    "vitest": "^0.31.2"
+    "selenium-webdriver": "^4.10.0",
+    "storybook": "^7.0.26",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.3",
+    "vitest": "^0.33.0"
   }
 }
