--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "lint": "eslint src",
-    "format": "prettier --list-different src"
+    "format": "prettier --check src"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.26",
